@@ -1,34 +1,31 @@
 package com.metao.examples.designpatterns.composite;
 
-import com.metao.examples.designpatterns.composite.BaseShape;
-import com.metao.examples.designpatterns.composite.Shape;
-
 import java.awt.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 public class CompoundShape extends BaseShape {
-    protected List<com.metao.examples.designpatterns.composite.Shape> children = new ArrayList<>();
+    protected List<Shape> children = new ArrayList<>();
 
-    public CompoundShape(com.metao.examples.designpatterns.composite.Shape... components) {
+    public CompoundShape(Shape... components) {
         super(0, 0, Color.BLACK);
         add(components);
     }
 
-    public void add(com.metao.examples.designpatterns.composite.Shape component) {
+    public void add(Shape component) {
         children.add(component);
     }
 
-    public void add(com.metao.examples.designpatterns.composite.Shape... components) {
+    public void add(Shape... components) {
         children.addAll(Arrays.asList(components));
     }
 
-    public void remove(com.metao.examples.designpatterns.composite.Shape child) {
+    public void remove(Shape child) {
         children.remove(child);
     }
 
-    public void remove(com.metao.examples.designpatterns.composite.Shape... components) {
+    public void remove(Shape... components) {
         children.removeAll(Arrays.asList(components));
     }
 
@@ -42,7 +39,7 @@ public class CompoundShape extends BaseShape {
             return 0;
         }
         int x = children.get(0).getX();
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        for (Shape child : children) {
             if (child.getX() < x) {
                 x = child.getX();
             }
@@ -52,11 +49,11 @@ public class CompoundShape extends BaseShape {
 
     @Override
     public int getY() {
-        if (children.size() == 0) {
+        if (children.isEmpty()) {
             return 0;
         }
-        int y = children.get(0).getY();
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        int y = children.getFirst().getY();
+        for (Shape child : children) {
             if (child.getY() < y) {
                 y = child.getY();
             }
@@ -68,7 +65,7 @@ public class CompoundShape extends BaseShape {
     public int getWidth() {
         int maxWidth = 0;
         int x = getX();
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        for (Shape child : children) {
             int childRelativeX = child.getX() - x;
             int childWidth = childRelativeX + child.getWidth();
             if (childWidth > maxWidth) {
@@ -82,7 +79,7 @@ public class CompoundShape extends BaseShape {
     public int getHeight() {
         int maxHeight = 0;
         int y = getY();
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        for (Shape child : children) {
             int childsRelativeY = child.getY() - y;
             int childHeight = childsRelativeY + child.getHeight();
             if (childHeight > maxHeight) {
@@ -94,14 +91,14 @@ public class CompoundShape extends BaseShape {
 
     @Override
     public void move(int x, int y) {
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        for (Shape child : children) {
             child.move(x, y);
         }
     }
 
     @Override
     public boolean isInsideBound(int x, int y) {
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        for (Shape child : children) {
             if (child.isInsideBound(x, y)) {
                 return true;
             }
@@ -112,13 +109,13 @@ public class CompoundShape extends BaseShape {
     @Override
     public void unSelect() {
         super.unSelect();
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        for (Shape child : children) {
             child.unSelect();
         }
     }
 
     public boolean selectChildAt(int x, int y) {
-        for (com.metao.examples.designpatterns.composite.Shape child : children) {
+        for (Shape child : children) {
             if (child.isInsideBound(x, y)) {
                 child.select();
                 return true;
